2003-05-31  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Add a parameter type specifier to avoid warning.

2003-05-22  Per Bothner  <per@bothner.com>

	* mac-test.scm:  New testcases based on bug reported
	2003-05-19 by Sven.Hartrumpf@FernUni-Hagen.de.

2003-05-22  Bruce R. Lewis <brlewis@ALUM.MIT.EDU>.

	* mac-test.scm:  Two new test cases.

2003-05-18  Per Bothner  <per@bothner.com>

	* misc-test.scm (fie-6):  New test, from Petter Oesterlund.

2003-05-13  Chris Dean <Chris.Dean@sokitomi.com>.

	* obj-test.scm:  New test for a name mangling problem.
	Detects bug fixed 05-16 (see gnu/kawa/reflect/ChangeLog).

2003-04-28  Per Bothner  <per@bothner.com>

	* obj-test.scm:  New test based on bug reported 02-20 by
	Vladimir Tsichevski <wowa@jet.msk.su>.

2003-04-27  Per Bothner  <per@bothner.com>

	* obj-test.scm:  New test based on bug reported 04-24 by
	Vladimir Tsichevski <wowa@jet.msk.su>.

2003-04-21  Vladimir Tsichevski <wowa@jet.msk.su>

	* mac-test.scm:  New test.

2003-04-21  Chris Dean  <Chris.Dean@sokitomi.com>

	* module1.scm, module2.scm:  New test.

2003-04-19  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm:  New tests for overloading and instance?.

2003-04-05  Per Bothner  <per@bothner.com>

	* classes1.scm (<SimpleA>):  Add two methods that return lambdas.
	* obj-test.scm:  Check that those work.

2003-04-01  Vladimir Tsichevski <wowa@jet.msk.su>

	* mac-test.scm:  Check set! in macro code.

2003-03-24  Per Bothner  <per@bothner.com>

	New testcase based on bug report from Chris Dean 2003-03-23.
	* classes1.scm (define-class-using-syntax-rules):  New macro.
	* classes2.scm (<SimpleC>):  Use new macro.

2003-03-13  Per Bothner  <per@bothner.com>

	* arr-test.scm:  Test for rebug reported by Chris Dean
	<ctdean@mercedsystems.com>.

2003-03-06  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  Add module3.scm.

2003-03-02  Per Bothner  <per@bothner.com>

	New test based on a bug reported by <Chris.Dean@sokitomi.com>.