@@ -1,3 +1,8 @@
+2003-06-01  Per Bothner  <per@bothner.com>
+
+	* mac-test.scm:  New cond-expand test, based on bug reported
+	2003-06-01 by Sven.Hartrumpf@FernUni-Hagen.de.
+
 2003-05-31  Per Bothner  <per@bothner.com>
 
 	* misc-test.scm:  Add a parameter type specifier to avoid warning.
